--- a/pages/dashboardListUser/dashboardListUser.html
+++ b/pages/dashboardListUser/dashboardListUser.html
@@ -583,7 +583,7 @@
                       </ul>
                     </div>
                   </div>
-                  <div class="col-8 ">
+                  <div class="col-md-8 ">
                     test
                   </div>
 
