view post edited

--- a/pages/common/commonButton.html
+++ b/pages/common/commonButton.html
@@ -27,28 +27,56 @@
   </head>
   <body>
     <div class="container">
-      <div class="col-3">
-        <div class="toggle-primary">
-          <div class="btn-group">
-            <button
-              type="button"
-              class="btn dropdown-toggle"
-              data-toggle="dropdown"
-              aria-haspopup="true"
-              aria-expanded="false"
-            >
-              <i class="fas fa-share-alt"></i> Share
-            </button>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">
-                <i class="fab fa-facebook-square"></i>
+      <div class="row">
+        <div class="col-2">
+          <div class="toggle-primary">
+            <div class="btn-group">
+              <button
+                type="button"
+                class="btn dropdown-toggle"
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
+              >
+                <i class="fas fa-share-alt"></i> Share
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">
+                  <i class="fab fa-facebook-square"></i>
 
-                Facebook</a
+                  Facebook</a
+                >
+                <a class="dropdown-item" href="#">
+                  <i class="fab fa-twitter"></i>
+                  Twitter</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="borderless-dropdown">
+            <div class="btn-group dropup">
+              <button
+                type="button"
+                class="btn "
+                data-toggle="dropdown"
+                aria-haspopup="true"
+                aria-expanded="false"
               >
-              <a class="dropdown-item" href="#">
-                <i class="fab fa-twitter"></i>
-                Twitter</a
-              >
+                <i class="fas fa-share-alt"></i> Share this post
+              </button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">
+                  <i class="fab fa-facebook-square"></i>
+
+                  Facebook</a
+                >
+                <a class="dropdown-item" href="#">
+                  <i class="fab fa-twitter"></i>
+                  Twitter</a
+                >
+              </div>
             </div>
           </div>
         </div>
