--- a/pages/portfolioUploadWork/portfolioUploadWork.html
+++ b/pages/portfolioUploadWork/portfolioUploadWork.html
@@ -253,7 +253,8 @@
               <div class="col-lg-7 col-md-7 mt-4 upload-section">
                 <div class="upload-frame ">
                   
-                  <img src="../../images/uploadIcon.png">
+                  <img src="../../images/uploadIcon.png" width="100" class="position-absolute " style="z-index: 12;">
+                  <img src="../../images/superman.png" class="position-absolute">
                   <input type="file" class="file_upload">
 
                 </div>
