--- a/pages/commonModel/commonModel.html
+++ b/pages/commonModel/commonModel.html
@@ -249,6 +249,65 @@
                   </div>
                 </form>
               </div>
+              <div class="row">
+                <div class="col-3">
+                  <div class="chip">
+                    <label class="chip-text">
+                      John DoeJohn DoeJohn DoeJohn DoeJohn Doe
+                    </label>
+                    <span
+                      class="closebtn"
+                      onclick="this.parentElement.style.display='none'"
+                      >&times;</span
+                    >
+                  </div>
+                </div>
+                <div class="col-3">
+                  <div class="chip">
+                    <label class="chip-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Atque maxime saepe itaque ipsum laborum impedit labore
+                      consectetur ab rerum eum voluptatem nostrum, natus,
+                      dolores, deserunt tenetur! Unde eos impedit suscipit.
+                    </label>
+                    <span
+                      class="closebtn"
+                      onclick="this.parentElement.style.display='none'"
+                      >&times;</span
+                    >
+                  </div>
+                </div>
+                <div class="col-3">
+                  <div class="chip">
+                    <label class="chip-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Atque maxime saepe itaque ipsum laborum impedit labore
+                      consectetur ab rerum eum voluptatem nostrum, natus,
+                      dolores, deserunt tenetur! Unde eos impedit suscipit.
+                    </label>
+                    <span
+                      class="closebtn"
+                      onclick="this.parentElement.style.display='none'"
+                      >&times;</span
+                    >
+                  </div>
+                </div>
+                <div class="col-3">
+                  <div class="chip">
+                    <label class="chip-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Atque maxime saepe itaque ipsum laborum impedit labore
+                      consectetur ab rerum eum voluptatem nostrum, natus,
+                      dolores, deserunt tenetur! Unde eos impedit suscipit.
+                    </label>
+                    <span
+                      class="closebtn"
+                      onclick="this.parentElement.style.display='none'"
+                      >&times;</span
+                    >
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary">
