--- a/pages/portfolioimage/portfolioimages.html
+++ b/pages/portfolioimage/portfolioimages.html
@@ -229,7 +229,7 @@
       <div class="content-wrapper bcolor">
         <div class="">
           <div class="container-fluid">
-            <div class="view-post" style="display: none;">
+            <div class="view-post">
               <div class="row ml-4 mr-4">
                 <div class="col-1 justify-content-center back-button">
                   <i class="fas fa-arrow-left"></i>
@@ -323,13 +323,21 @@
                         <p class="align-items-center">Aditya Raz</p>
                       </div>
                       <div class="row mt-4">
-                        <div class="col-md">
+                        <div class="col">
                           <p><b>Bright Colours</b></p>
-                          <p>Bright Colours</p>
                         </div>
-                        <div class="col-md">
+                        <div class="col">
                           <p><b>Updated on 12/02/2021</b></p>
                         </div>
+                      </div>
+                      <div class="row">
+                        <p>
+                          Lorem ipsum dolor sit, amet consectetur adipisicing
+                          elit. Dolorum deleniti ipsum earum incidunt similique
+                          velit. Cumque magni neque pariatur, sit quidem
+                          veritatis architecto quis rerum earum minima dolore
+                          consequatur saepe?
+                        </p>
                       </div>
 
                       <div class="row">
@@ -358,83 +366,43 @@
 
                       <div class="marker-section mt-4">
                         <div class="row">
-                          <div class="col-md-2">
+                          <div class="col-2">
                             <img
                               src="../../images/profile.png"
                               class="rounded-circle align-content-start"
-                              width="50"
-                              height="50"
+                              width="40"
+                              height="40"
                             />
                           </div>
-                          <div class="col-md-9">
+                          <div class="col-8">
                             <p><b>Aditya Raz</b></p>
                             <p>
                               User has added a comment. User has added a comment
                               <a href=""><u>Show Markers</u></a>
                             </p>
                           </div>
-                          <div class="col-md-1 marker-comment-close">
-                            <i class="fas fa-times-circle align-items-end"></i>
+                          <div class="col-2 marker-comment-close">
+                            <i class="fas fa-times-circle float-right"></i>
                           </div>
                         </div>
                         <div class="row">
-                          <div class="col-md-2">
+                          <div class="col-2">
                             <img
                               src="../../images/profile.png"
                               class="rounded-circle align-content-start"
-                              width="50"
-                              height="50"
+                              width="40"
+                              height="40"
                             />
                           </div>
-                          <div class="col-md-9">
+                          <div class="col-8">
                             <p><b>Aditya Raz</b></p>
                             <p>
                               User has added a comment. User has added a comment
                               <a href=""><u>Show Markers</u></a>
                             </p>
                           </div>
-                          <div class="col-md-1 marker-comment-close">
-                            <i class="fas fa-times-circle align-items-end"></i>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-md-2">
-                            <img
-                              src="../../images/profile.png"
-                              class="rounded-circle align-content-start"
-                              width="50"
-                              height="50"
-                            />
-                          </div>
-                          <div class="col-md-9">
-                            <p><b>Aditya Raz</b></p>
-                            <p>
-                              User has added a comment. User has added a comment
-                              <a href=""><u>Show Markers</u></a>
-                            </p>
-                          </div>
-                          <div class="col-md-1 marker-comment-close">
-                            <i class="fas fa-times-circle align-items-end"></i>
-                          </div>
-                        </div>
-                        <div class="row">
-                          <div class="col-md-2">
-                            <img
-                              src="../../images/profile.png"
-                              class="rounded-circle align-content-start"
-                              width="50"
-                              height="50"
-                            />
-                          </div>
-                          <div class="col-md-9">
-                            <p><b>Aditya Raz</b></p>
-                            <p>
-                              User has added a comment. User has added a comment
-                              <a href=""><u>Show Markers</u></a>
-                            </p>
-                          </div>
-                          <div class="col-md-1 marker-comment-close">
-                            <i class="fas fa-times-circle align-items-end"></i>
+                          <div class="col-2 marker-comment-close">
+                            <i class="fas fa-times-circle float-right"></i>
                           </div>
                         </div>
                       </div>
@@ -444,7 +412,7 @@
               </div>
             </div>
 
-            <div class="view-edit-post">
+            <div class="view-edit-post" style="display: none;">
               <div class="row ml-4 mr-4">
                 <div class="col-9">
                   <span class="f-montserrat-regular"> Bright Colours</span>
