Problem request changes

--- a/pages/commonModel/commonModel.html
+++ b/pages/commonModel/commonModel.html
@@ -74,6 +74,16 @@
             Profile
           </button>
         </div>
+        <div class="col-1 mr-3">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-toggle="modal"
+            data-target="#feed-modal"
+          >
+            Feedback Modal
+          </button>
+        </div>
       </div>
 
       <div
