--- a/pages/contactUs/contactus.html
+++ b/pages/contactUs/contactus.html
@@ -81,7 +81,7 @@
       </nav>
 
       <div class="row container-fluid login-container">
-        <div class="col-md-6 signup-image">
+        <div class="col-md-6 signup-image d-none d-md-flex">
           <div class="text-section">
             <p class="first">QUERY!</p>
             <p class="second">tell us about your query.</p>
