--- a/pages/portfolioimage/postfolionew.html
+++ b/pages/portfolioimage/postfolionew.html
@@ -247,7 +247,10 @@
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <span class="zoom-icon"
-                              ><img src="../../images/zoomIcon.png" width="24" height="24"
+                              ><img
+                                src="../../images/zoomIcon.png"
+                                width="24"
+                                height="24"
                             /></span>
                             <div class="profile-frame">
                               <img
@@ -258,8 +261,11 @@
                           </div>
                           <div class="carousel-item">
                             <span class="zoom-icon"
-                            ><img src="../../images/zoomIcon.png" width="24" height="24"
-                          /></span>
+                              ><img
+                                src="../../images/zoomIcon.png"
+                                width="24"
+                                height="24"
+                            /></span>
                             <div class="profile-frame">
                               <img
                                 src="../../images/feed_2.png"
@@ -270,8 +276,11 @@
                           </div>
                           <div class="carousel-item">
                             <span class="zoom-icon"
-                            ><img src="../../images/zoomIcon.png" width="24" height="24"
-                          /></span>
+                              ><img
+                                src="../../images/zoomIcon.png"
+                                width="24"
+                                height="24"
+                            /></span>
                             <div class="profile-frame">
                               <img
                                 src="../../images/feed_3.png"
