--- a/pages/portfolioUploadWork/portfolioUploadWork.html
+++ b/pages/portfolioUploadWork/portfolioUploadWork.html
@@ -253,22 +253,22 @@
               <div class="col-lg-7 col-md-7 mt-4 upload-section">
                 <div class="row text-center d-flex justify-content-center ">
                   <div class="col-2 upload-type m-1">
-                    <label for="file-pdf-input">PDF</label>
+                    <label for="file-pdf-input"> <i class="fas fa-file-pdf"></i> PDF</label>
                     <input id="file-pdf-input" type="file" accept="application/pdf" />
 
                   </div>
                   <div class="col-2 upload-type m-1">
        
-                    <label for="file-video-input">             Video</label>
+                    <label for="file-video-input">   <i class="fab fa-youtube"></i>          Video</label>
                     <input id="file-video-input" type="file" accept="application/pdf" />
                   </div>
                   <div class="col-2 upload-type m-1">
-                    <label for="file-audio-input">             Audio</label>
+                    <label for="file-audio-input">        <i class="fas fa-volume-up"></i>     Audio</label>
                     <input id="file-audio-input" type="file" accept="application/pdf" />
                     
                   </div>
                   <div class="col-2 upload-type m-1">
-                    <label for="file-image-input">       Image</label>
+                    <label for="file-image-input">   <i class="fas fa-images"></i>    Image</label>
                     <input id="file-image-input" type="file" accept="application/pdf" />
                   </div>
                 </div>
