--- a/pages/competition/competition.html
+++ b/pages/competition/competition.html
@@ -93,7 +93,12 @@
   </head>
   <body>
     <a id="button">
-      <i class="fas fa-chevron-circle-up"></i>
+      <div>
+        <i class="fas fa-chevron-circle-up"></i>
+      </div>
+      <button type="button" class="btn btn-outline-primary">
+        Sign Up
+      </button>
     </a>
 
     <div class="container-fluid">
@@ -140,15 +145,15 @@
               </button>
             </div>
           </div>
-          <video autoplay muted width="100%">
+          <!-- <video autoplay muted width="100%">
             <source
               src="https://www.rmp-streaming.com/media/big-buck-bunny-360p.mp4
             "
               type="video/mp4"
             />
-          </video>
+          </video> -->
 
-          <!-- <div
+          <div
             id="carouselExampleControls"
             class="carousel slide"
             data-ride="carousel"
@@ -200,7 +205,7 @@
               ></span>
               <span class="sr-only">Next</span>
             </a>
-          </div> -->
+          </div>
         </div>
       </div>
 
@@ -209,10 +214,10 @@
         <div
           class="row justify-content-center align-items-center competition-content"
         >
-          <div class="col-4 img-box">
+          <div class="col-md-4 img-box">
             <img src="../../dist/img/photo1.png" width="100%" />
           </div>
-          <div class="col-4 competition-info">
+          <div class="col-md-4 competition-info">
             <h4>Support your whole team</h4>
             <p>
               As the leader in creative learning, our unmatched catalog of
@@ -229,7 +234,7 @@
         <div
           class="row justify-content-center align-items-center competition-content"
         >
-          <div class="col-4 competition-info">
+          <div class="col-md-4 competition-info">
             <h4>Support your whole team</h4>
             <p>
               As the leader in creative learning, our unmatched catalog of
@@ -242,17 +247,17 @@
               Primary
             </button>
           </div>
-          <div class="col-4 img-box">
+          <div class="col-md-4 img-box">
             <img src="../../dist/img/photo2.png" width="100%" />
           </div>
         </div>
         <div
           class="row justify-content-center align-items-center competition-content"
         >
-          <div class="col-4 img-box">
+          <div class="col-md-4 img-box">
             <img src="../../dist/img/photo1.png" width="100%" />
           </div>
-          <div class="col-4 competition-info">
+          <div class="col-md-4 competition-info">
             <h4>Support your whole team</h4>
             <p>
               As the leader in creative learning, our unmatched catalog of
@@ -273,10 +278,10 @@
         <div
           class="row justify-content-center align-items-center competition-content"
         >
-          <div class="col-4 img-box">
+          <div class="col-md-4 img-box">
             <img src="../../dist/img/photo4.jpg" width="100%" />
           </div>
-          <div class="col-4 competition-info">
+          <div class="col-md-4 competition-info">
             <h4>Support your whole team</h4>
             <p>
               As the leader in creative learning, our unmatched catalog of
@@ -293,7 +298,7 @@
         <div
           class="row justify-content-center align-items-center competition-content"
         >
-          <div class="col-4 competition-info">
+          <div class="col-md-4 competition-info">
             <h4>Support your whole team</h4>
             <p>
               As the leader in creative learning, our unmatched catalog of
@@ -306,17 +311,17 @@
               Primary
             </button>
           </div>
-          <div class="col-4 img-box">
+          <div class="col-md-4 img-box">
             <img src="../../dist/img/photo2.png" width="100%" />
           </div>
         </div>
         <div
           class="row justify-content-center align-items-center competition-content"
         >
-          <div class="col-4 img-box">
+          <div class="col-md-4 img-box">
             <img src="../../dist/img/avatar5.png" width="100%" />
           </div>
-          <div class="col-4 competition-info">
+          <div class="col-md-4 competition-info">
             <h4>Support your whole team</h4>
             <p>
               As the leader in creative learning, our unmatched catalog of
@@ -337,10 +342,10 @@
         <div
           class="row justify-content-center align-items-center competition-content"
         >
-          <div class="col-4 img-box">
+          <div class="col-md-4 img-box">
             <img src="../../dist/img/prod-2.jpg" width="100%" />
           </div>
-          <div class="col-4 competition-info">
+          <div class="col-md-4 competition-info">
             <h4>Support your whole team</h4>
             <p>
               As the leader in creative learning, our unmatched catalog of
@@ -357,7 +362,7 @@
         <div
           class="row justify-content-center align-items-center competition-content"
         >
-          <div class="col-4 competition-info">
+          <div class="col-md-4 competition-info">
             <h4>Support your whole team</h4>
             <p>
               As the leader in creative learning, our unmatched catalog of
@@ -370,17 +375,17 @@
               Primary
             </button>
           </div>
-          <div class="col-4 img-box">
+          <div class="col-md-4 img-box">
             <img src="../../dist/img/prod-4.jpg" width="100%" />
           </div>
         </div>
         <div
           class="row justify-content-center align-items-center competition-content"
         >
-          <div class="col-4 img-box">
+          <div class="col-md-4 img-box">
             <img src="../../dist/img/prod-2.jpg" width="100%" />
           </div>
-          <div class="col-4 competition-info">
+          <div class="col-md-4 competition-info">
             <h4>Support your whole team</h4>
             <p>
               As the leader in creative learning, our unmatched catalog of
